src/components/header/Header.scss
.header {
  background-color: #3a0b18;
  // background-color: var(--color-psy-dark-blue);
  width: 100vw;
  color: rgb(196, 194, 194);
  font-size: 6rem;
  font-family: 'Architects Daughter', cursive;
  text-align: center;
  top: 0;
  left: 0;
  padding: 1rem;

  @media screen and (max-width: 710px) {
    font-size: 3.5rem;
  }
}

.subheading {
  width: 80%;
  font-size: 2rem;
  margin: 0 auto 1.5rem auto;
  padding: 1rem 0.5rem;
  height: min-content;
  margin-top: 5rem;

  &__text {
    text-align: center;
  }

  @media screen and (max-width: 710px) {
    font-size: 1.5rem;
    margin-top: 1rem;
  }
}

.fadeOut_1 {
  animation-name: fadeOut_1;
  animation-duration: 3s;
  animation-fill-mode: both;
  animation-timing-function: ease-out;
}

@keyframes fadeOut_1 {
  0% {
    opacity: 1;
  }
  75% {
    opacity: 1;
  }
  100% {
    opacity: 0;
    // height: 0;
  }
}

.fadeOut_2 {
  animation-name: fadeOut_2;
  animation-duration: 8s;
  animation-fill-mode: both;
  animation-timing-function: ease-out;
}

@keyframes fadeOut_2 {
  0% {
    opacity: 0;
  }
  40% {
    opacity: 0;
  }
  55% {
    opacity: 1;
  }

  75% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.fadeIn {
  animation-name: fadeIn;
  animation-duration: 2s;
  animation-fill-mode: both;
  animation-timing-function: ease-out;
}

